<resources>
    <string name="app_name">JWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="subscription">Subscription</string>
    <string name="history">History</string>
    <string name="categories">Categories</string>
    <string name="category_image">category image</string>
    <string name="category">Category</string>
    <string name="user_profile">User Profile</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="transfers">Transfers</string>
    <string name="planner">Planner</string>
    <string name="targets">targets</string>
    <string name="statistics">Statistics</string>
    <string name="total">Total</string>
    <string name="all">All</string>
    <string name="add">Add</string>
    <string name="family_and_friends">Family and Friends</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="wallets">Wallets</string>
    <string name="up_arrow">up arrow</string>
    <string name="e_mail">E-mail</string>
    <string name="notifications">Notifications</string>
    <string name="category_icon">category icon</string>
    <string name="monthly_budget">Monthly budget</string>
    <string name="finish">Finish</string>
    <string name="amount">Amount</string>
</resources>