<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c6c6c6"
    tools:context=".presentation.monitoring.history.HistoryFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:background="@drawable/shape_rectangle_rounded"
        android:layout_margin="8dp"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_all"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape_rectangle_rounded_black_8dp"
        android:padding="6dp"
        android:text="@string/all"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/tv_incomes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/tv_incomes"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape_rectangle_rounded_8dp"
        android:padding="6dp"
        android:text="@string/income"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/tv_expenses"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_all"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/tv_expenses"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape_rectangle_rounded_8dp"
        android:padding="6dp"
        android:text="@string/expense"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/tv_transfers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_incomes"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/tv_transfers"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/shape_rectangle_rounded_8dp"
        android:padding="6dp"
        android:text="@string/transfers"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_expenses"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>