<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c6c6c6"
    tools:context=".presentation.monitoring.statistics.StatisticsFragment">

    <TextView
        android:id="@+id/tv_statistics_income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rectangle_rounded_black_8dp"
        android:padding="6dp"
        android:text="@string/incomes"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/tv_statistics_expense"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_statistics_expense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_rectangle_rounded_8dp"
        android:padding="6dp"
        android:text="@string/expenses"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/tv_statistics_transfers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_statistics_income"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_statistics_transfers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rectangle_rounded_8dp"
        android:padding="6dp"
        android:text="@string/transfers"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_statistics_expense"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_statistics_expense">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_statistics_tabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_statistics_income, tv_statistics_expense, tv_statistics_transfers"
        tools:layout_editor_absoluteY="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_statistics_data_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>